Fix alignment issues.

--- a/static/css/design.css
+++ b/static/css/design.css
@@ -470,3 +470,7 @@ ul li {
     background: #9c702e;
     font-style: italic;
 }
+
+.tags {
+    margin-top: 10px;
+}
